# semagrow-sandbox-c-code

./: .gitignore  Makefile  Makefile.in  README.md  build.sh  configure  configure.ac  deploy.sh  pom.xml
src/: Makefile  Makefile.am  Makefile.in
src/.deps/: hello.Po
