#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(helloWorld, 1.0.0_rc1, jakobitschj@semantic-web.at)
AM_INIT_AUTOMAKE(helloWorld, 1.0.0_rc1)
#AC_CONFIG_SRCDIR([src/hello.c])
#AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile src/Makefile)
