#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(helloWorld, 1.0.0_rc1, jakobitschj@semantic-web.at)
AC_CONFIG_SRCDIR([src/hello.c])
AM_INIT_AUTOMAKE

#AC_CONFIG_HEADERS([config.h])

AC_PROG_CC

AC_CONFIG_FILES([
 Makefile
 src/Makefile
])
AC_OUTPUT
